--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.kafka.bootstrap-servers=8.130.112.57:9092
+#spring.kafka.bootstrap-servers[0]= ?????????????????
+#spring.kafka.bootstrap-servers[1]=
+#spring.kafka.bootstrap-servers[2]=
 
+#???????key?value
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
